media/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - r.desertbluffs.com
  rules:
    - host: r.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http-jellyfin
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-images
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache jellyfin;
      proxy_cache_revalidate on;
      proxy_cache_lock on;
      add_header X-Cache-Status $upstream_cache_status; # This is only to check if cache is working
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - r.desertbluffs.com
  rules:
    - host: r.desertbluffs.com
      http:
        paths:
          - path: /Items/(.*)/Images/
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http-jellyfin
